06_pyapp-k8manifest/pyapp_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2        # how many pods we can add at a time
      maxUnavailable: 0  # maxUnavailable define how many pods can be unavailable during the rolling update
  selector:
    matchLabels:
      app: pyapp
  template:
    metadata:
      labels:
        app: pyapp
    spec:
      containers:
        - name: pingpong
          image: 155996996326.dkr.ecr.us-east-1.amazonaws.com/pyapp:747281
          resources:
            requests:
              memory: "128Mi"
              cpu: "512m"
            limits:
              memory: "128Mi"
              cpu: "512m"

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /ping
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /ping
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /
              port: 5000
            failureThreshold: 30
            periodSeconds: 10
